--- a/heureka-scraper/pom.xml
+++ b/heureka-scraper/pom.xml
@@ -94,5 +94,10 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <resources>
+      <resource>
+        <directory>src/resources</directory>
+      </resource>
+    </resources>
   </build>
 </project>
